# docs/swagger.yaml
@@ -1,4 +1,13 @@
 definitions:
+  request.ChangePasswordReq:
+    properties:
+      newPassword:
+        description: 新密码
+        type: string
+      password:
+        description: 密码
+        type: string
+    type: object
   request.Login:
     properties:
       password:
@@ -57,7 +66,33 @@ definitions:
 info:
   contact: {}
 paths:
-  /admin/login:
+  /api/changePassword:
+    post:
+      parameters:
+      - description: 用户名, 原密码, 新密码
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/request.ChangePasswordReq'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 用户修改密码
+          schema:
+            allOf:
+            - $ref: '#/definitions/response.Response'
+            - properties:
+                msg:
+                  type: string
+              type: object
+      security:
+      - ApiKeyAuth: []
+      summary: 修改密码
+      tags:
+      - 系统用户
+  /api/login:
     post:
       parameters:
       - description: 用户名, 密码
@@ -83,7 +118,7 @@ paths:
       summary: 登录
       tags:
       - 系统用户
-  /admin/register:
+  /api/register:
     post:
       parameters:
       - description: 用户名, 昵称, 密码,
